# gaussian-blur-opencl

./: CMakeLists.txt  README.md  kernel.cl  main.cpp
